--- a/Savio/SACreateSavingPlanViewController/SavingCategoryTableViewCell.xib
+++ b/Savio/SACreateSavingPlanViewController/SavingCategoryTableViewCell.xib
@@ -23,7 +23,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="obs-re-Qcr">
-                        <rect key="frame" x="75" y="33" width="237" height="34"/>
+                        <rect key="frame" x="75" y="35" width="237" height="32"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="237" id="cD6-pO-72o"/>
                         </constraints>
@@ -39,7 +39,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Group Save" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EjD-IM-oCa">
-                        <rect key="frame" x="75" y="16" width="133" height="17"/>
+                        <rect key="frame" x="75" y="20" width="133" height="17"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="17" id="MxG-9Z-3e0"/>
                         </constraints>
@@ -52,12 +52,18 @@
                     <constraint firstItem="obs-re-Qcr" firstAttribute="leading" secondItem="aOo-vc-KOf" secondAttribute="trailing" constant="8" id="4Jn-hZ-wKv"/>
                     <constraint firstItem="aOo-vc-KOf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="12" id="Dyo-9C-e1j"/>
                     <constraint firstAttribute="trailingMargin" secondItem="obs-re-Qcr" secondAttribute="trailing" id="K67-Q5-HxQ"/>
-                    <constraint firstItem="EjD-IM-oCa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="Rzl-qm-PJs"/>
+                    <constraint firstItem="obs-re-Qcr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="35" id="OII-2t-sIf"/>
+                    <constraint firstItem="EjD-IM-oCa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="12" id="Rzl-qm-PJs"/>
                     <constraint firstItem="obs-re-Qcr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="25" id="TAX-mc-dOv"/>
                     <constraint firstAttribute="bottomMargin" secondItem="obs-re-Qcr" secondAttribute="bottom" constant="4" id="YiW-oz-qLM"/>
                     <constraint firstItem="EjD-IM-oCa" firstAttribute="leading" secondItem="aOo-vc-KOf" secondAttribute="trailing" constant="8" id="e02-W2-mXc"/>
                     <constraint firstItem="aOo-vc-KOf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="wAP-Jz-j42"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="TAX-mc-dOv"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="imgView" destination="aOo-vc-KOf" id="DDX-CX-0y1"/>
